--- a/EduTube/EduTube.GUI/Views/Videos/SingleVideo.cshtml
+++ b/EduTube/EduTube.GUI/Views/Videos/SingleVideo.cshtml
@@ -30,7 +30,7 @@
          }
       </div>
       <!--Div with video name and view count-->
-      <div class="col-12">
+      <div class="col-12" style="margin-top: 1rem">
          <div class="inheritDiv">
             <h4 class="float-left" style="margin-right:1em;">@Model.Name</h4>
             <h5 class="float-right" id="viewsCount"></h5>
