--- a/EduTube/EduTube.GUI/wwwroot/css/ChatPage.css
+++ b/EduTube/EduTube.GUI/wwwroot/css/ChatPage.css
@@ -193,9 +193,9 @@ img {
    width: 57%;
 }
    .received_withd_msg p {
-      background: #ebebeb none repeat scroll 0 0;
+      background: #ffffff none repeat scroll 0 0;
       border-radius: 3px;
-      color: #646464;
+      color: black;
       font-size: 14px;
       margin: 0;
       padding: 5px 10px 5px 12px;
