--- a/EduTube/EduTube.GUI/Views/Shared/_Layout.cshtml
+++ b/EduTube/EduTube.GUI/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
       <nav class="navbar navbar-expand-lg navbar-toggleable-sm box-shadow mb-3">
 			<div class="container-fluid">
 				<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
-					<img src="~/images/4f652811-550b-42bf-95cb-4603325068ef_200x200.png" style="height: 6rem" />
+					<img src="~/images/logo.png" style="height: 6rem" />
 				</a>
 				<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 						  aria-expanded="false" aria-label="Toggle navigation">
