--- a/EduTube/EduTube.GUI/Views/Users/Login.cshtml
+++ b/EduTube/EduTube.GUI/Views/Users/Login.cshtml
@@ -17,18 +17,20 @@
       <input asp-for="Password" type="password" class="form-control" placeholder="Password" />
       <span asp-validation-for="Password" style="color:red;"></span>
 
-      <input asp-for="RememberMe" id="rememberMe" />
-      <label class="col-form-label whiteColor">Remember me</label>
+      <div class="col-12" style="padding: 0;">
+         <input asp-for="RememberMe" id="rememberMe" />
+         <label class="col-form-label whiteColor">Remember me</label>
+      </div>
 
       <button type="submit" class="purpleBtn" id="signInButton">Sing in</button>
-      <div class="text-center" id="optionsDiv">
-         <a class="whiteColor">Forgot password?</a>
-         <div class="or">
-            <hr class="bar" />
-            <span class="whiteColor">OR</span>
-            <hr class="bar" />
-         </div>
-         <button id="createAccount">Create an account</button>
-      </div>
    </form>
+   <div class="text-center" id="optionsDiv">
+      <a class="whiteColor">Forgot password?</a>
+      <div class="or">
+         <hr class="bar" />
+         <span class="whiteColor">OR</span>
+         <hr class="bar" />
+      </div>
+      <button id="createAccount" onclick='RedirectTo("/Register")'>Create an account</button>
+   </div>
 </div>
